// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin actions Add Plugin 1`] = `
Object {
  "payload": Object {
    "name": "events",
  },
  "type": "@@MT/COMMON/ADD_PLUGIN",
}
`;

exports[`Plugin actions Remove Plugin 1`] = `
Object {
  "payload": Object {
    "name": "events",
  },
  "type": "@@MT/COMMON/REMOVE_PLUGIN",
}
`;
